# f69

./: .gitignore  README.md  db.sqlite3  pyproject.toml
account/: admin.py  forms.py  managers.py  models.py
api/: pyproject.toml
api/account/: admin.py  forms.py
api/flag/models/: access.py
api/web/forms/: project.py
api/web/templates/project/: base.html
api/web/views/: __init__.py
backend/: .env.example  Cargo.toml
backend/auth/migration/: Cargo.toml
backend/auth/migration/src/: lib.rs  m20240328_000001_create_users.rs
backend/auth/service/: Cargo.toml
backend/auth/service/src/: error.rs  lib.rs  main.rs  state.rs
backend/auth/service/src/entity/: mod.rs  user.rs
backend/auth/service/src/routes/: health.rs  jwks.rs  mod.rs  v1.rs
backend/deploy/: auth.Dockerfile  docker-compose.yml  flag.Dockerfile  gen-dev-jwt.sh
backend/deploy/init-db/: 01-create-databases.sql
backend/flag/migration/: Cargo.toml
backend/flag/migration/src/: lib.rs  m20240328_000001_create_projects_and_flags.rs
backend/flag/service/: Cargo.toml
backend/flag/service/src/: auth_user.rs  error.rs  jwks_cache.rs  lib.rs  main.rs  state.rs
backend/flag/service/src/entity/: feature_flag.rs  mod.rs  project.rs
backend/flag/service/src/routes/: health.rs  mod.rs  v1.rs
backend/shared/config/: Cargo.toml
backend/shared/config/src/: lib.rs
backend/shared/security/: Cargo.toml
backend/shared/security/src/: jwt.rs  lib.rs  password.rs
backend/shared/telemetry/: Cargo.toml
backend/shared/telemetry/src/: lib.rs
core/: settings.py  urls.py
core/flag/models/: environment.py
core/web/forms/: feature.py
core/web/static/web/: home.css
core/web/templates/project/: secret-created.html
core/web/templates/projects/: create.html
core/web/templates/registration/: login.html
core/web/views/: auth.py
flag/: admin.py  urls.py  views.py
flag/models/: __init__.py  entities.py  entity.py  environment.py  features.py  flags.py  projects.py  segments.py
sh/: cadmin
web/: index.html  package.json  pnpm-lock.yaml  urls.py  views.py
web/forms/: __init__.py  auth.py  secret.py  segment.py
web/static/web/: auth.css  home.css  index.css  main.css  project-form.css  project.css
web/templates/: base.html  home.html  index.html  project.html
web/templates/features/: create.html
web/templates/project/: api.html  base.html  collaborators.html  create-feature.html  create-secret.html  create-segment.html  edit-segment.html  entities.html  environments.html  feature-detail.html  features.html  overview.html  segments.html
web/templates/registration/: signup.html
web/views/: __init__.py  features.py  project.py  secrets.py
