[project]
name = "f69"
version = "0.1.0"
description = "A powerful and flexible feature flagging system built with Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
]

[tool.pyright]
venv = ".venv"
venvDir = "."
typeCheckingMode = "standard"