[project]
name = "f69"
version = "0.1.0"
description = "A powerful and flexible feature flagging system built with Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-ninja>=1.4.3",
    "django-tailwind[reload]>=4.2.0",
    "pydantic>=2.11.7",
    "shared",
]

[tool.basedpyright]
venv = ".venv"
venvPath = "."
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "standard"
reportAny = false
reportUnannotatedClassAttribute = false
reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.uv.sources]
shared = { git = "https://github.com/rubbieKelvin/shared", rev = "v2" }

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "basedpyright>=1.31.6",
    "django-import-export>=4.3.14",
    "django-stubs[compatible-mypy]>=5.2.7",
    "djangorestframework-stubs[compatible-mypy]>=3.16.4",
    "ipython>=9.9.0",
]
