[package]
name = "shared-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
